python/testData/inspections/PyUnresolvedReferencesInspection/UsedUnresolvedNameImportedSeveralTimes/a.py
<warning descr="Unused import statement">from my_package.my_module import <error descr="Cannot find reference 'eggs' in 'my_module.py'">eggs</error></warning>
from my_package.my_module import <error descr="Cannot find reference 'eggs' in 'my_module.py'">eggs</error>

eggs()
